Fixed cutting left side on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ table td, table th {
 .wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: center;
 }
 .right-side-wrapper {
   overflow: auto;
